feat: docs updated with few contents in the index pages

--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
@@ -43,4 +43,4 @@ We can even build trust-minimized two-way peg mechanism, secured by ZK proofs an
 
 **Currently WIP**
 
-[https://github.com/BitVM/BitVM](https://github.com/BitVM/BitVM)
+Forked version - [https://github.com/surgebuild/BitVM](https://github.com/surgebuild/BitVM)
