--- a/docs/pages/more-read/advantages-of-choosing-mpc-tss-over-alternative-methods.mdx
+++ b/docs/pages/more-read/advantages-of-choosing-mpc-tss-over-alternative-methods.mdx
@@ -46,4 +46,4 @@ MPC based Threshold Signatures The MPC-based threshold signature scheme divides 
 
 **Cons:** The shaping process is harder on performance, but due to recent advancements in this field very much feasible.
 
-_Source:_ [https://mmasmoudi.medium.com/an-overview-of-multi-party-computation-mpc-threshold-signatures-tss-and-mpc-tss-wallets-4253adacd1b2](https://mmasmoudi.medium.com/an-overview-of-multi-party-computation-mpc-threshold-signatures-tss-and-mpc-tss-wallets-4253adacd1b2)
+_[Source](https://mmasmoudi.medium.com/an-overview-of-multi-party-computation-mpc-threshold-signatures-tss-and-mpc-tss-wallets-4253adacd1b2)_
