feat: adding meta tags

--- a/docs/pages/basics/attempts-to-scale-bitcoin.mdx
+++ b/docs/pages/basics/attempts-to-scale-bitcoin.mdx
@@ -1,3 +1,8 @@
+---
+title: Attempts to Scale Bitcoin
+description: So far attempts made to scale Bitcoin]
+---
+
 # Attempts to Scale Bitcoin [So far attempts made to scale Bitcoin]
 
 ## 1. Segregated Witness (SegWit)
