--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/bitvm.mdx
@@ -1,3 +1,8 @@
+---
+title: BitVM
+description: Unleashing Smart Contract Capabilities on Bitcoin
+---
+
 # BitVM [Unleashing Smart Contract Capabilities on Bitcoin]
 
 BitVM is an approach that introduces the concept of Turing-complete smart contracts to the Bitcoin blockchain, without necessitating any changes to Bitcoin's consensus rules. It's built on the foundation of existing Bitcoin opcodes like hash locks, timelocks, and large Taproot trees, making the blockchain capable of verifying complex computations off-chain through a mechanism known as optimistic rollups​​​​.
