--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/finality.mdx
@@ -1,3 +1,8 @@
+---
+title: Finality
+description: Using Bitcoin Layer for Ensuring Irreversible Transactions on the Blockchain
+---
+
 # Finality [Using Bitcoin Layer for Ensuring Irreversible Transactions on the Blockchain]
 
 ## Stacks Model for Achieving Absolute Bitcoin Finality
