--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: Bitcoin as a Settlement Layer
+description: The Bitcoin Settlement Layer anchors Layer 2 scalability solutions
+---
+
 # Bitcoin as a Settlement Layer [The Bitcoin Settlement Layer anchors Layer 2 scalability solutions]
 
 The Bitcoin Settlement Layer plays a pivotal role in the infrastructure of Layer 2 (L2) scaling solutions by ensuring the integrity and finality of transactions. It utilizes the robust security and widespread trust in the Bitcoin blockchain to anchor the state of L2 networks, thereby leveraging Bitcoin's immutability to enhance the overall security of the L2 ecosystem.
