--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/bitcoin-shared-security.mdx
@@ -1,3 +1,8 @@
+---
+title: Bitcoin Shared Security
+description: Unlocking 21 Million to Secure the Decentralised Economy
+---
+
 # Bitcoin Shared Security [Unlocking 21 Million to Secure the Decentralised Economy]
 
 ## Babylon Model for Bitcoin Shared Security with Staking
