--- a/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/shared-security-protocol.mdx
+++ b/docs/pages/basics/bitcoin-as-a-settlement-layer/shared-security/shared-security-protocol.mdx
@@ -1,3 +1,8 @@
+---
+title: Shared Security Protocol
+description: BTC Shared Security Significantly Enhances The Security Of Decentralized Systems Through Bitcoin Staking
+---
+
 # Shared Security Protocol [BTC Shared Security Significantly Enhances The Security Of Decentralized Systems Through Bitcoin Staking]
 
 ## Lorenzo Model for Bitcoin Shared Security through Babylon
