--- a/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
+++ b/docs/pages/basics/journey-of-rollups-on-bitcoin.mdx
@@ -1,3 +1,8 @@
+---
+title: Journey of Rollups on Bitcoin
+description: Unwrapping rollups one layer at a time
+---
+
 # Journey of Rollups on Bitcoin [Unwrapping rollups one layer at a time]
 
 Lets see the Bitcoin Roadmap from 2013 to Now,
