--- a/docs/pages/basics/understanding-the-rollups.mdx
+++ b/docs/pages/basics/understanding-the-rollups.mdx
@@ -1,3 +1,8 @@
+---
+title: Understanding the Rollups
+description: How traditional rollups works
+---
+
 # Understanding the Rollups [How traditional rollups works]
 
 Rollups work by "rolling up" or bundling hundreds or thousands of transactions into a single transaction. This method significantly reduces the amount of data that needs to be processed and stored on the main blockchain, leading to faster transaction times and lower fees.
