--- a/docs/pages/more-read/advantages-of-choosing-mpc-tss-over-alternative-methods.mdx
+++ b/docs/pages/more-read/advantages-of-choosing-mpc-tss-over-alternative-methods.mdx
@@ -1,3 +1,8 @@
+---
+title: MPC TSS Over Alternative Methods
+description: Advantages of Choosing MPC TSS Over Alternative Methods
+---
+
 # Advantages of Choosing MPC TSS Over Alternative Methods
 
 ## 1. MultiSig
