--- a/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
+++ b/docs/pages/more-read/bitcoin-scaling-trilemma.mdx
@@ -1,3 +1,8 @@
+---
+title: Bitcoin Scaling Trilemma
+description: The main goal of Bitcoin L2 blockchains is to supercharge Bitcoin transactions (reduce transaction latency) without sacrificing decentralization or security.
+---
+
 # Bitcoin Scaling Trilemma
 
 The main goal of Bitcoin L2 blockchains is to supercharge Bitcoin transactions (reduce transaction latency) without sacrificing decentralization or security.
