--- a/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
+++ b/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
@@ -1,3 +1,11 @@
+---
+title: How does a Bitcoin Transaction Work?
+description: A typical transaction flow within this architecture begins at the
+application layer, moves through L2 or L3 solutions for processing, and concludes
+with final settlement on the Bitcoin blockchain. This streamlined process ensures
+efficiency, security, and adherence to Bitcoin's decentralized nature.
+---
+
 # How does a Bitcoin Transaction Work?
 
 A simplified transaction on the bitcoin will look like this,
