--- a/docs/pages/more-read/how-raas-interface-will-evolve.mdx
+++ b/docs/pages/more-read/how-raas-interface-will-evolve.mdx
@@ -1,3 +1,8 @@
+---
+title: How RaaS Interface will Evolve?
+description: At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
+---
+
 # How RaaS Interface will Evolve? [Simplifying Complex Processes]
 
 At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
