--- a/docs/pages/overview/why-surge.mdx
+++ b/docs/pages/overview/why-surge.mdx
@@ -1,3 +1,8 @@
+---
+title: Why Surge?
+description: Need for Rollups infrastructure on Bitcoin
+---
+
 # Why Surge? [Need for Rollups infrastructure on Bitcoin]
 
 Bitcoin L2s are not just a narrative, hype, or even experimental; they're an adaptive response from the Bitcoin community to grow beyond scalability limitations. It's easy to forget that Bitcoin is a network and an asset: BTC. It's the most decentralized and secure Network, with BTC having the highest market capitalization.
