--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -1,3 +1,8 @@
+---
+title: Surge Architecture
+description: A Modular novel approach taken by Surge to Scale Bitcoin ecosystem via Rollups (L2's)
+---
+
 # Architecture [A Modular novel approach taken by Surge to Scale Bitcoin ecosystem via Rollups (L2's)]
 
 ## Overview
