--- a/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
+++ b/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
@@ -1,3 +1,8 @@
+---
+title: MPC TSS Bridge
+description: 2 way Peg with MPC TSS based Network Nodes for BTC Bridge
+---
+
 # ↳ 1️⃣ MPC TSS Bridge [2 way Peg with MPC TSS based Network Nodes for BTC Bridge]
 
 Unlike traditional BTC bridges that rely on central custodians or multi-signature federations, Surge introduces a novel approach leveraging a verifier network powered by Multi-Party Computation (MPC) Threshold Signature Scheme (TSS).
