--- a/docs/pages/surge-building-blocks/superstack.mdx
+++ b/docs/pages/surge-building-blocks/superstack.mdx
@@ -1,3 +1,8 @@
+---
+title: Superstack
+description: A gateway to scale Rollups on Bitcoin
+---
+
 # ⏫ Superstack [A gateway to scale Rollups on Bitcoin]
 
 ## Overview
