--- a/docs/pages/surge-building-blocks/utilities/oracles-and-indexers.mdx
+++ b/docs/pages/surge-building-blocks/utilities/oracles-and-indexers.mdx
@@ -1,3 +1,8 @@
+---
+title: Oracles & Indexers
+description: Essential Tools for Data Management and Integration
+---
+
 # ➡️ Oracles & Indexers [Essential Tools for Data Management and Integration]
 
 ## Overview
