--- a/docs/pages/surge-building-blocks/utilities/overview.mdx
+++ b/docs/pages/surge-building-blocks/utilities/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: Utilities
+description: Enhancing Rollup Functionality
+---
+
 # ↳ 3️⃣ Utilities [Enhancing Rollup Functionality]
 
 ## Overview
