--- a/docs/pages/surge-building-blocks/zkp-verifier-network.mdx
+++ b/docs/pages/surge-building-blocks/zkp-verifier-network.mdx
@@ -1,3 +1,8 @@
+---
+title: ZKP Verifier Network
+description: PoS based ZKP verifier network
+---
+
 # ↳ 2️⃣ ZKP Verifier Network [PoS based ZKP verifier network]
 
 Our ultimate goal is to enable native verification of Zero-Knowledge Proofs (ZKPs) within Bitcoin blocks. This advancement requires the introduction of new opcodes—such as OP_verifystarkproof in Bitcoin's script language. We believe that these necessary changes will evolve and be adapted over time, until then we are developing a ZKP Verifier Network.
