--- a/docs/pages/users-tooling/run-a-validator-node.mdx
+++ b/docs/pages/users-tooling/run-a-validator-node.mdx
@@ -1,3 +1,8 @@
+---
+title: Run a Validator Node
+description: Coming soon...
+---
+
 # Run a Validator Node [Create a validator from running node]
 
 **Coming Soon...**
