--- a/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
+++ b/docs/pages/more-read/upcoming-bitcoin-l2s.mdx
@@ -1,3 +1,8 @@
+---
+title: Upcoming Bitcoin L2's
+description: Upcoming and existing Bitcoin L2's and List of teams working on it
+---
+
 # Upcoming Bitcoin L2's [Upcoming and existing Bitcoin L2's and List of teams working on it]
 
 At the core of our platform, the operation revolves around a few key principles designed to maximize efficiency, security, and user accessibility
