--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -1,3 +1,8 @@
+---
+title: Introduction
+description: Modular Rollup as a Service for Bitcoin Ecosystem
+---
+
 <img src="/assets/intro.png" alt="Introduction" />
 
 # Introduction to Surge [Modular Rollup as a Service for Bitcoin Ecosystem]
