--- a/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
+++ b/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
@@ -1,3 +1,8 @@
+---
+title: Native Gas Token
+description: You can use BTC as the native gas token on the Rollups. We are actively expanding this feature to include support for additional tokens, including protocol-specific tokens and stablecoins.
+---
+
 # ➡️ Native Gas Token
 
 You can use BTC as the native gas token on the Rollups. We are actively expanding this feature to include support for additional tokens, including protocol-specific tokens and stablecoins.
