--- a/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
+++ b/docs/pages/surge-building-blocks/utilities/native-stable-coins.mdx
@@ -1,3 +1,8 @@
+---
+title: Native Stable Coins
+description: Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity.
+---
+
 # ➡️ Native Stable Coins
 
 Rollups can also introduce fragmentation of protocol’s total value locked (TVL) and inherent liquidity. This problem highlights the need for increased interoperability between layer-2 ecosystems.
