--- a/docs/pages/users-tooling/node-setup-guide.mdx
+++ b/docs/pages/users-tooling/node-setup-guide.mdx
@@ -1,3 +1,8 @@
+---
+title: Node Setup Guide
+description: Coming soon... Set up a Superstack verifier node
+---
+
 # Node Setup Guide [Set up a Superstack verifier node]
 
 Step by Step guide to setup a node for Surge Superstack layer
