--- a/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
+++ b/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
@@ -1,9 +1,6 @@
 ---
 title: How does a Bitcoin Transaction Work?
-description: A typical transaction flow within this architecture begins at the
-application layer, moves through L2 or L3 solutions for processing, and concludes
-with final settlement on the Bitcoin blockchain. This streamlined process ensures
-efficiency, security, and adherence to Bitcoin's decentralized nature.
+description: A typical transaction in Bitcoin flow diagram
 ---
 
 # How does a Bitcoin Transaction Work?
