--- a/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
+++ b/docs/pages/more-read/how-does-a-bitcoin-transaction-work.mdx
@@ -1,3 +1,8 @@
+---
+title: How does a Bitcoin Transaction Work?
+description: A typical transaction in Bitcoin flow diagram
+---
+
 # How does a Bitcoin Transaction Work?
 
 A simplified transaction on the bitcoin will look like this,
