feat: added image for seo fix: url for mpc

--- a/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
+++ b/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
@@ -27,7 +27,7 @@ The two-way peg in Surge is designed to facilitate unilateral withdrawals, allow
 
 By integrating MPC technology within a verifier network that accesses the Data Availability (DA) layer to validate proofs submitted by provers, we ensure the secure and private release of funds
 
-### Benefits of Using MPC in Surge
+## Benefits of Using MPC in Surge
 
 - **Decentralized Key Management:** In an MPC system, the private key required to sign blockchain transactions is never fully assembled in one location. Instead, key shares are distributed among multiple parties
 
