feat: added all logos

--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -1,8 +1,34 @@
 ---
-title: Branding and Logos 
+title: Branding and Logos
 description: Modular Rollup as a Service for Bitcoin Ecosystem
 ---
 
 <img src="/assets/branding_cover.png" alt="Branding" />
 
 # Branding and Logos [Modular Rollup as a Service for Bitcoin Ecosystem]
+
+## Surge - Primary logo
+
+| <img src="/branding/Primary_Full_Light.png"  alt="Branding" /> | <img src="/branding/Primary_Full_Dark.png" alt="Branding" /> |
+| :------------------------------------------------------------: | :----------------------------------------------------------: |
+
+| <img src="/branding/Primary_Icon_Rec_Light.png"  alt="Branding" /> | <img src="/branding/Primary_Icon_Rec_Dark.png" alt="Branding" /> | <img src="/branding/Primary_Icon_Circle_Light.png" alt="Branding" /> | <img src="/branding/Primary_Icon_Circle_Dark.png" alt="Branding" /> |
+| :----------------------------------------------------------------: | :--------------------------------------------------------------: | :------------------------------------------------------------------: | :-----------------------------------------------------------------: |
+
+## Surge - Monogram
+
+| <img src="/branding/Monogram_Full_Light.png"  alt="Branding" /> | <img src="/branding/Monogram_Full_Dark.png" alt="Branding" /> |
+| :-------------------------------------------------------------: | :-----------------------------------------------------------: |
+
+| <img src="/branding/Monogram_Icon_Rec_Light.png"  alt="Branding" /> | <img src="/branding/Monogram_Icon_Rec_Dark.png" alt="Branding" /> | <img src="/branding/Monogram_Icon_Circle_Light.png" alt="Branding" /> | <img src="/branding/Monogram_Icon_Circle_Dark.png" alt="Branding" /> |
+| :-----------------------------------------------------------------: | :---------------------------------------------------------------: | :-------------------------------------------------------------------: | :------------------------------------------------------------------: |
+
+## Surge Superstack - Primary Logo
+
+| <img src="/branding/Superstack_Light.png"  alt="Branding" /> | <img src="/branding/Superstack_Dark.png" alt="Branding" /> |
+| :----------------------------------------------------------: | :--------------------------------------------------------: |
+
+## Surge Superstack - Monogram
+
+| <img src="/branding/Superstack_Monogram_Light.png"  alt="Branding" /> | <img src="/branding/Superstack_Monogram_Dark.png" alt="Branding" /> |
+| :-------------------------------------------------------------------: | :-----------------------------------------------------------------: |
