fix: branding kit update

--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -1,8 +1,44 @@
 ---
-title: Branding and Logos 
-description: Modular Rollup as a Service for Bitcoin Ecosystem
+title: Surge | Branding and Logos 
+description: Surge Brand Kit and Logos
 ---
 
 <img src="/assets/branding_cover.png" alt="Branding" />
 
 # Branding and Logos [Modular Rollup as a Service for Bitcoin Ecosystem]
+
+## Specification
+
+- **Theme Color**
+    - HEX: #F4431C
+    - RGB: 244, 67, 28
+    - CMYK: 0, 69, 85, 4
+    - HSB: 11, 89, 96
+
+## Download Brand Pack (including SVGs)
+- [Surge Branding Logos.zip](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos.zip)
+
+
+## Regular Logos
+
+surge-full-primary-black：
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-full-primary-black.png)
+
+surge-icon-circle-dark：
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-circle-dark.png" alt="surge-icon-circle-dark" width="200" />
+
+surge-icon-circle-light：
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-circle-light.png" alt="surge-icon-circle-light" width="200" />
+
+surge-icon-rec-dark：
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-rec-dark.png" alt="surge-icon-rec-dark" width="200" />
+
+surge-icon-rec-light：
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-rec-light.png" alt="surge-icon-rec-light" width="200" />
+
+surge-superstack-full-black：
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-superstack-full-black.png" alt="surge-superstack-full-black" width="600" />
+
+## Colours
+<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/colour_palette.png" alt="surge-superstack-full-black" width="100%" />
