--- a/docs/pages/surge-building-blocks/customizations/alternative-data-availability.mdx
+++ b/docs/pages/surge-building-blocks/customizations/alternative-data-availability.mdx
@@ -1,5 +1,5 @@
 ---
-title: Alternative Data Availability
+title: Surge | Alternative Data Availability
 description: Surge supports Alternative Data Availability (Alt-DA) through integrations with platforms like Celestia, Eigen Layer, and Nubit. Alt-DA solutions are essential for ensuring the reliability and efficiency of rollups within the Surge ecosystem.
 ---
 
