--- a/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
+++ b/docs/pages/surge-building-blocks/mpc-tss-bridge.mdx
@@ -1,5 +1,5 @@
 ---
-title: MPC TSS Bridge
+title: Surge | MPC TSS Bridge
 description: 2 way Peg with MPC TSS based Network Nodes for BTC Bridge
 ---
 
