--- a/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
+++ b/docs/pages/surge-building-blocks/customizations/native-gas-token.mdx
@@ -1,5 +1,5 @@
 ---
-title: Native Gas Token
+title: Surge | Native Gas Token
 description: You can use BTC as the native gas token on the Rollups. We are actively expanding this feature to include support for additional tokens, including protocol-specific tokens and stablecoins.
 ---
 
