feat: added new branding images

--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -1,5 +1,5 @@
 ---
-title: Surge | Branding and Logos 
+title: Surge | Branding and Logos
 description: Surge Brand Kit and Logos
 ---
 
@@ -10,35 +10,81 @@ description: Surge Brand Kit and Logos
 ## Specification
 
 - **Theme Color**
-    - HEX: #F4431C
-    - RGB: 244, 67, 28
-    - CMYK: 0, 69, 85, 4
-    - HSB: 11, 89, 96
+  - HEX: #F4431C
+  - RGB: 244, 67, 28
+  - CMYK: 0, 73, 89, 4
+  - HSB: 11, 89, 96
 
 ## Download Brand Pack (including SVGs)
-- [Surge Branding Logos.zip](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos.zip)
 
+- [Surge Branding Logos.zip](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos.zip)
 
 ## Regular Logos
 
 surge-full-primary-black：
 
-![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-full-primary-black.png)
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-full-primary-light.png)
 
-surge-icon-circle-dark：
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-circle-dark.png" alt="surge-icon-circle-dark" width="200" />
+surge-full-monogram-light:
 
-surge-icon-circle-light：
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-circle-light.png" alt="surge-icon-circle-light" width="200" />
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-full-monogram-light.png)
 
-surge-icon-rec-dark：
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-rec-dark.png" alt="surge-icon-rec-dark" width="200" />
+surge-full-monogram-dark:
 
-surge-icon-rec-light：
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-icon-rec-light.png" alt="surge-icon-rec-light" width="200" />
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-full-monogram-dark.png)
 
-surge-superstack-full-black：
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/Regular%20Logos%20(PNG)/surge-superstack-full-black.png" alt="surge-superstack-full-black" width="600" />
+surge-icon-light:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-icon-light.png)
+
+surge-icon-dark:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-icon-dark.png)
+
+surge-icon-mono-light:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-icon-mono-light.png)
+
+surge-icon-mono-dark:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-icon-mono-dark.png)
+
+clearspace-surge-full-primary:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/clearspace-surge-full-primary.png)
+
+surge-do-not-misuse:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-do-not-misuse.png)
+
+surge-superstack-full-light:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-full-light.png)
+
+surge-superstack-full-dark:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-full-dark.png)
+
+surge-superstack-mono-full-light:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-mono-full-light.png)
+
+surge-superstack-mono-full-dark:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-mono-full-dark.png)
+
+clearspace-surge-superstack-full-primary:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/clearspace-surge-superstack-full-primary.png)
+
+surge-superstack-do-not-misuse:
+
+![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-superstack-do-not-misuse.png)
 
 ## Colours
-<img src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/colour_palette.png" alt="surge-superstack-full-black" width="100%" />
+
+<img
+  src="https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/colour-palette.png"
+  alt="surge-superstack-full-black"
+  width="100%"
+/>
