Hot-fix: name change for Surge docs branding

--- a/docs/pages/resources/branding-and-logos.mdx
+++ b/docs/pages/resources/branding-and-logos.mdx
@@ -21,7 +21,7 @@ description: Surge Brand Kit and Logos
 
 ## Regular Logos
 
-surge-full-primary-black：
+surge-full-primary-light:
 
 ![surge-full-primary-black.png](https://surge.sfo3.cdn.digitaloceanspaces.com/assets/Surge%20Branding%20Logos/docs-only/surge-full-primary-light.png)
 
