--- a/docs/pages/surge-building-blocks/bitcoin-zk-rollups.mdx
+++ b/docs/pages/surge-building-blocks/bitcoin-zk-rollups.mdx
@@ -1,29 +1,25 @@
 ---
-title: Zero Knowledge for Bitcoin Rollups
+title: Bitcoin ZK Rollups
 description: The role of Zero knowledge proofs in Bitcoin L2s
 ---
 
-# Zero Knowledge for Bitcoin Rollups
+# Bitcoin ZK Rollups
 
-## What is Zero Knowledge Proof?
+Zero-Knowledge (ZK) proofs significantly enhance the scalability, security, and efficiency of blockchain technologies. ZK-Rollups, in particular, are a type of Layer 2 scaling solution that can significantly improve Bitcoin's transaction throughput and reduce computational load on the main blockchain..
 
-Zero-Knowledge (ZK) proofs significantly enhance the scalability, security, and efficiency of blockchain technologies. ZK-Rollups, in essence, bundle multiple transactions into a single batch, providing a single proof in return. These proofs are then verified on the main blockchain as one transaction, greatly increasing transaction throughput and lightening the computational load on the main network.
-
-The security features of ZK proofs confirm transaction validity without revealing excessive transaction details, thereby maintaining system integrity and user privacy. By aggregating transactions, ZK-Rollups manage to lower gas fees, making the network more cost-effective for commercial and large-scale use.
-
-Once verified, transactions in ZK-Rollups achieve instant finality, eliminating the need for long confirmation times. Importantly, they are interoperable with existing blockchain ecosystems, which enhances overall functionality. The privacy benefits of ZK proofs protect sensitive information, which is vital for applications requiring confidentiality.
+The key idea behind ZK-Rollups is to batch multiple transactions into a single cryptographic proof, which is then submitted to the main Bitcoin blockchain. This proof verifies the validity of the bundled transactions without revealing their details, providing a scalable and privacy-preserving way to process transactions off-chain.
 
 ZK-Rollups manage blockchain bloat by reducing on-chain data. They post only the proof and minimal transaction data. The ZK proofs alone assure the correctness of transactions, which can be verified much faster.
 
 <p align="center">
-  <img width="350" src="/assets/ZKP.png" alt="Understanding rollups" />
+  <img width="90%" src="/assets/zkflow.png" alt="Understanding rollups" />
+</p>  
+### How Bitcoin ZK-Rollups work?
+The primary goal is to enhance scalability by reducing the load on the main Bitcoin network. The zk-Rollup achieves this through zero-knowledge proofs, ensuring that all transactions in the rollup batch are valid without revealing any transaction details.
+
+<p align="center">
+  <img width="100%" src="/assets/bitcoin-zk.png" alt="Understanding rollups" />
 </p>
-
-## Zero-Knowledge Proof for Bitcoin Rollups
-
-**Bitcoin**, a decentralized and secure digital currency, faces constraints in scalability and privacy due to its limited transaction throughput and block size. Bitcoin’s blockchain processes about 7 transactions per second (TPS), often leading to congestion and high fees during peak times, making Bitcoin unsuitable for commercial and widespread use.
-
-Zero-Knowledge proofs emerge as an ideal solution for Bitcoin Rollups due to their unique advantages. The concept of Zero-Knowledge provides numerous benefits, making it not only cost-effective but also a necessary implementation for Bitcoin rollups. The implementation of Zero-Knowledge proofs could significantly improve the overall performance and security of the system.
 
 Some of the Benefits for ZKPs are being explored as a way to enhance Bitcoin Rollups in several ways:
 
