--- a/docs/pages/surge-building-blocks/bitcoin-zk-rollups.mdx
+++ b/docs/pages/surge-building-blocks/bitcoin-zk-rollups.mdx
@@ -13,9 +13,13 @@ ZK-Rollups manage blockchain bloat by reducing on-chain data. They post only the
 
 <p align="center">
   <img width="90%" src="/assets/zkflow.png" alt="Understanding rollups" />
-</p>  
-### How Bitcoin ZK-Rollups work?
-The primary goal is to enhance scalability by reducing the load on the main Bitcoin network. The zk-Rollup achieves this through zero-knowledge proofs, ensuring that all transactions in the rollup batch are valid without revealing any transaction details.
+</p>
+### How Bitcoin ZK-Rollups work?{" "}
+
+The primary goal is to enhance scalability by reducing
+the load on the main Bitcoin network. The zk-Rollup achieves this through zero-knowledge
+proofs, ensuring that all transactions in the rollup batch are valid without revealing
+any transaction details.
 
 <p align="center">
   <img width="100%" src="/assets/bitcoin-zk.png" alt="Understanding rollups" />
@@ -23,13 +27,10 @@ The primary goal is to enhance scalability by reducing the load on the main Bitc
 
 Some of the Benefits for ZKPs are being explored as a way to enhance Bitcoin Rollups in several ways:
 
-- **Increased Privacy:** ZKPs would allow users to prove they have sufficient funds to make a transaction without revealing the amount being sent or received. This would enhance financial privacy for the users.
+- **Increased Privacy:** ZKPs would allow users to prove they have sufficient funds to make a transaction without revealing the amount being sent or received. ZKPs would enhance financial privacy for the users. ZKPs could enable users to store confidential assets or anonymous marketplaces.
 - **Improved Scalability:** ZKPs can potentially reduce the amount of data stored on Bitcoin blockchain by allowing verification of complex transactions without needing to reveal all the details. This could help Bitcoin scale to handle more transactions with a smaller data footprint on-chain.
-- **Anonymity:** ZKPs could enable users to store confidential assets or anonymous marketplaces.
 - **Energy Efficiency:** By reducing the need for excessive computational resources to verify transactions, ZK-Rollups could make the Bitcoin network more energy-efficient, addressing one of the major criticisms regarding Bitcoin’s environmental impact.
 - **Enhanced Security:** ZK proofs add an additional layer of security, ensuring that transactions are valid without exposing sensitive information, which helps protect against fraud and cyber attacks.
-- **Decentralization:** ZK-Rollups can enhance the decentralization of Bitcoin by reducing the reliance on large mining operations. Smaller participants can verify transactions without needing significant computational power, as verification proofs require much less energy.
-- **Interoperability:** The integration of ZK-Rollups with Bitcoin can enhance its interoperability with other blockchain networks, facilitating easier and more secure cross-chain transactions and broadening Bitcoin’s use cases.
 - **Cost-Effectiveness:** Lower transaction fees due to reduced data storage and processing needs make Bitcoin Rollups more attractive for everyday transactions, potentially increasing its adoption among users and businesses.
 
 In conclusion, the integration of ZK-Rollups into Bitcoin addresses issues of scalability, transaction fees, and privacy. By leveraging zero-knowledge proofs, ZK-Rollups enhance Bitcoin’s functionality while preserving its decentralization and security.
