--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -7,31 +7,31 @@ description: A Modular novel approach taken by Surge to Scale Bitcoin ecosystem 
 
 ## Overview
 
-We took a modular first approach to design our architecture. This not only ensures a highly customisable and tailored end product but also heightens the security & performance of L2s built on us.
+We took a modular first approach to design our architecture. This not only ensures a highly customizable and tailored end product but also heightens the security & performance of L2s built on us.
 
 ## Modular Architecture Model
 
 Surge provides a layered approach for launching Bitcoin rollups by separating the Executions, Settlement and Data Availability
 
-1. **Execution Layer:** Supports multiple virtual machines (VMs) including EVM and MoveVM, allowing developers to build on various rollup frameworks.
+1. **Execution Layer:** Supports multiple virtual machines (VMs) including EVM and MoveVM, allowing developers to build on VM of their choice.
 
-2. **Settlement Layer:** Manages transaction finalization using a robust, PoS-based network that ensures security and efficiency.
+2. **Settlement Layer:** Manages transaction finalization using a robust zero knowledge proofs, enabling for fast settlements.
 
-3. **Data Layer:** Maintains data availability and integrity, crucial for transparent operations across the platform.
+3. **Data Layer:** Maintains data availability for the chain and data integrity, crucial for transparent operations across the platform.
 
 <img src="/assets/architecture-model.png" alt="architecture model" />
 
 ### Ecosystem Tooling
 
-Surge provides comprehensive tooling for dApps, enabling them to easily integrate and migrate to Bitcoin L2s to be available in the Bitcoin ecosystem
+By allowing users to build over any VM, you have the added benefit of existing tooling and tooling Surge provides for dApps, enabling them to easily integrate and migrate to Bitcoin L2s to be available in the Bitcoin ecosystem
 
 ### Execution & Frameworks
 
-Out of the box, we plan on supporting multiple VMs like EVM, MoveVM., with planned extensions to other VMs for enhanced flexibility. This also, lets us build on top of any rollup framework like OPStack or Arbitrum Orbit and transactions are batched via rollups thereby generating ZK proofs.
+Out of the box, we plan on supporting multiple VMs like EVM, MoveVM., with planned extensions to other VMs for enhanced flexibility. This also, lets us build on top of any rollup framework like OPStack or Arbitrum Orbit and transactions are batched via our modular framework generating ZK proofs and eventually settling on Bitcoin.
 
 ### Surge Superstack
 
-Our proprietary Surge Superstack layer acts as an intermediary and accepts the ZK proofs from the execution layers and pushes the transaction data to the DA layer and Merkle state hash to the Bitcoin L1 layer through inscriptions. Once the inscribed data settles on the Bitcoin we are inheriting the Bitcoin security. We’re building a PoS protocol-based network which secures the network and facilitates the proof verification.
+Our proprietary Surge Superstack layer acts as an intermediary that sits on top of bitcoin. Superstack is a PoS protocol-based layer which secures the network and facilitates the proof verification of transactions. Superstack accepts the ZK proofs from the execution layers and pushes the transaction data to the DA layer and verified Merkle state hash to the Bitcoin L1 layer through inscriptions. By inscribing the data on the Bitcoin we are inheriting the security of Bitcoin.
 
 <img
   className="md:w-[60%] mx-auto"
@@ -39,7 +39,7 @@ Our proprietary Surge Superstack layer acts as an intermediary and accepts the Z
   alt="superstack"
 />
 
-Superstack also contains MPC TSS-based network nodes for bridging the assets from Bitcoin to rollups.
+Superstack also contains MPC TSS-based network nodes for bridging the assets from Bitcoin to necessary native token for the rollups.
 
 ### Bitcoin Settlement
 
