fix: minor edits

--- a/docs/pages/surge-building-blocks/architecture.mdx
+++ b/docs/pages/surge-building-blocks/architecture.mdx
@@ -39,7 +39,7 @@ Our proprietary Surge Superstack layer acts as an intermediary that sits on top 
   alt="superstack"
 />
 
-Superstack also contains MPC TSS-based network nodes for bridging the assets from Bitcoin to necessary native token for the rollups.
+Superstack also contains MPC TSS-based network nodes for bridging the assets from Bitcoin to rollups.
 
 ### Bitcoin Settlement
 
