--- a/docs/pages/overview/introduction.mdx
+++ b/docs/pages/overview/introduction.mdx
@@ -26,7 +26,7 @@ The primary goal of Surge is to address three significant issues in the Bitcoin 
 
 We are achieving this with a novel **"Superstack"** layer on top of Bitcoin.
 
-The **Superstack** is an intermediate, foundational, PoS-based layer that facilitates three major factors:
+The **Superstack** is an intermediate, foundational, PoS-based layer that has 3 essential components:
 
 - **MPC TSS Bridge:** <p className="_list-paragraph">A two-way peg bridge powered by decentralized Threshold Signature Schemes, where signature and key-share generation by network nodes ensures secure computation with an honest minority.</p>
 - **ZKP Verifier with Proof Inscription:** <p className="_list-paragraph">A network of decentralized nodes that validate proofs from the Rollups and inscribe the [Merkle](https://en.wikipedia.org/wiki/Merkle_tree) state root and transaction data onto Bitcoin or any other Data Availability (DA) Layer.</p>
